@@ -1,5 +1,14 @@
 2011-10-12  Tony Chang  <tony@chromium.org>
 
+        Fix test-webkitpy after r97307 and r97293.
+
+        * Scripts/webkitpy/layout_tests/port/chromium.py: options.time_out_ms
+          is None during tests so add back the check.
+        * Scripts/webkitpy/layout_tests/port/chromium_win_unittest.py: The
+          output directory is now build/Debug.
+
+2011-10-12  Tony Chang  <tony@chromium.org>
+
         [chromium] remove old build dirs on chromium-win
         https://bugs.webkit.org/show_bug.cgi?id=69961
 
